fixed missing 'learning objectives' section and cleaned up whitespace in sass file

--- a/css-assessment/stylesheet-pdf.scss
+++ b/css-assessment/stylesheet-pdf.scss
@@ -17,7 +17,6 @@ h1[data-type="document-title"] {
     padding-left: 0.5in;
     line-height: 0em;
     
-
     .os-part-text, .os-number {
         color: #0074bc;
         margin-right: 8px;
@@ -90,7 +89,7 @@ div.os-figure.has-splash {
         padding: 0.5em 0 1.5rem 1.5rem;
         color: white;
         
-        a{
+        a {
             color: white;
             text-decoration: none;
             line-height: 1.5em;
@@ -98,12 +97,11 @@ div.os-figure.has-splash {
             text-align: left;
             display: block;
         }
+
         h3 {
             border-bottom: white 2px solid;
             line-height: 2rem;
         }
-
-
     }
 
     .intro-text {
@@ -121,7 +119,6 @@ div.os-figure.has-splash {
             font-weight: 700;
             font-size: 12px;
         }
-
     }
 }
 
@@ -136,7 +133,10 @@ div.os-figure.has-splash {
     }
 
     h3[data-type="title"] {
-        display: none;
+        margin-top: 0.5rem;
+        margin-bottom: 0em;
+        color: #0074bc;
+        font-family: $muli-font;
     }
 
     p {
@@ -152,7 +152,7 @@ div.os-figure.has-splash {
     ul {
         margin-top: 0;
         margin-left: 0;
-        padding-left: 0px;
+        padding-left: 15px;
         font-family: $muli-font;
         font-size: 1rem;
         list-style-type: none;
@@ -161,12 +161,6 @@ div.os-figure.has-splash {
     li::before {
         content: "• ";
         color: #0074bc;
-        padding-left: 0px;
-        margin-left: 0; // for PrinceXML, it kept indenting my bullets
-    }
-
-    li {
-        padding-left: 0px;
-        margin-left: 0; // for PrinceXML, it kept indenting my bullets
+        padding-right: 5px;
     }
 }
